image zoom out effect for roundthumb.js

--- a/src/html/assets/scss/_ui.scss
+++ b/src/html/assets/scss/_ui.scss
@@ -50,7 +50,7 @@
 
 	>.inner{
 		overflow: hidden;
-		background-image: url('http://blog.iso50.com/wp-content/uploads/2010/06/article_image-image-article-2-450x450.jpg');
+		background-image: url('http://farm4.staticflickr.com/3001/2553994871_f565e5bc40_z.jpg');
 		background-position: center center;
 	}
 
