fixed background size bug for roundthumb

--- a/src/html/assets/scss/_ui.scss
+++ b/src/html/assets/scss/_ui.scss
@@ -50,7 +50,7 @@
 
 	>.inner{
 		overflow: hidden;
-		background-image: url('http://farm4.staticflickr.com/3001/2553994871_f565e5bc40_z.jpg');
+		background-image: url('http://weandthecolor.com/wp-content/uploads/2012/10/Geometry-a-Day-Artwork-by-Jeremiah-Shaw-and-Danny-Jones-43556.jpg');
 		background-position: center center;
 	}
 
