added SVG-based UISpinner

--- a/src/html/assets/scss/_ui.scss
+++ b/src/html/assets/scss/_ui.scss
@@ -51,50 +51,50 @@
 	>.inner{
 		overflow: hidden;
 		background-image: url('http://weandthecolor.com/wp-content/uploads/2012/10/Geometry-a-Day-Artwork-by-Jeremiah-Shaw-and-Danny-Jones-43556.jpg');
+
+		>.innerOverlay{
+			width: 100%;
+			height: 100%;
+
+			>div{
+				position: absolute;
+			}
+		}
 	}
 
-	>.symbol{
+	.symbol{
 		position: absolute;
-		left: -32px;
-		top: -32px;
-		pointer-events: none;
-
-		background-repeat: no-repeat;
-		background-position: center;
-
+		left: 50%;
+		top: 50%;
+		margin-left: -32px;
+		margin-top: -32px;
 		@include single-transition(opacity, .4s, ease-out);
 		opacity: .2;
 
 		//outline: 1px solid red;
 	}
 
-	&:hover{
-		>.symbol{
-			opacity: .8;
-		}
-	}
-
 	&.image{
-		>.symbol{
+		.symbol{
 			@include icon-sprite("thumb-symbol-image");
 		}
 	}
 
 	&.video{
-		>.symbol{
+		.symbol{
 			@include icon-sprite("thumb-symbol-video");
 		}
 	}
 
 	&.flash{
-		>.symbol{
+		.symbol{
 			@include icon-sprite("thumb-symbol-flash");
 		}
 	}
-}
 
-.roundThumbLoader{
-	position: absolute;
-	top: 50%;
-	height: 50%;
+	&:hover{
+		.symbol{
+			opacity: .8;
+		}
+	}
 }
