load dynamic background image for roundthumb; improved hover effect and responsiveness for roundthumb;

--- a/src/html/assets/scss/_ui.scss
+++ b/src/html/assets/scss/_ui.scss
@@ -50,7 +50,7 @@
 
 	>.inner{
 		overflow: hidden;
-		background-image: url('http://weandthecolor.com/wp-content/uploads/2012/10/Geometry-a-Day-Artwork-by-Jeremiah-Shaw-and-Danny-Jones-43556.jpg');
+		//background-image: url('http://weandthecolor.com/wp-content/uploads/2012/10/Geometry-a-Day-Artwork-by-Jeremiah-Shaw-and-Danny-Jones-43556.jpg');
 
 		>.innerOverlay{
 			width: 100%;
