commented off node availability check in build.sh;

--- a/source/scss/main.scss
+++ b/source/scss/main.scss
@@ -18,8 +18,7 @@ $icon-layout:smart;
 
 #hidden-dom-wrapper{
 	position: absolute;
-	top: 0;
-	left: 0;
-	width: 0;
-	height: 0;
+	visibility: hidden;
+	width: 0px;
+	height: 0px;
 }
