--- a/source/scss/_global.scss
+++ b/source/scss/_global.scss
@@ -17,10 +17,13 @@ $font_system: Arial, Helvetica, sans-serif;
 
 
 html, body{
-  position: absolute;
   width: 100%;
   height: 100%;
   font-family: $font_system !important;
+}
+
+html{
+  overflow: hidden;
 }
 
 body{
