--- a/source/scss/main.scss
+++ b/source/scss/main.scss
@@ -19,6 +19,6 @@ $icon-layout:smart;
 #hidden-dom-wrapper{
 	position: absolute;
 	visibility: hidden;
-	width: 0px;
-	height: 0px;
+	width: 0;
+	height: 0;
 }
