--- a/source/scss/_global.scss
+++ b/source/scss/_global.scss
@@ -4,7 +4,7 @@
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 
 // --- Global vars ---
-$min_width: 1024px;
+$min_width: 768px;
 $min_height: 640px;
 $font_system: Arial, Helvetica, sans-serif;
 
@@ -20,16 +20,13 @@ html, body{
   width: 100%;
   height: 100%;
   font-family: $font_system !important;
-}
-
-html{
+  min-width: $min_width;
+  min-height: $min_height;
   overflow: hidden;
 }
 
 body{
   background: #E8F1F7;
-  min-width: $min-width;
-  min-height: $min-height; 
 }
 
 *{
